; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_alert.c_showAlert.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_alert.c_showAlert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MB_OK = common dso_local global i32 0, align 4
@MB_OKCANCEL = common dso_local global i32 0, align 4
@IDOK = common dso_local global i32 0, align 4
@EXEC_FAILED = common dso_local global i32 0, align 4
@TASK_SUCCESS = common dso_local global i32 0, align 4
@kCFUserNotificationDefaultResponse = common dso_local global i64 0, align 8
@kCFUserNotificationNoteAlertLevel = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @showAlert(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = load i32, i32* @MB_OK, align 4
  br label %18

16:                                               ; preds = %4
  %17 = load i32, i32* @MB_OKCANCEL, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  %20 = call i32 @MessageBox(i32* null, i8* %10, i8* %11, i32 %19)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @IDOK, align 4
  %23 = icmp eq i32 %21, %22
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i32 0, i32 1
  ret i32 %25
}

declare dso_local i32 @MessageBox(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
